src/Parser00.jj
PARSER_BEGIN(Parser)


/** ID lister. */
public class Parser {

  /** Main entry point. */
  public static void main(String args[]) {
    Parser parser = new Parser(System.in);
    while (true) {
    try {
    System.out.println( "OK!");
    } catch (Exception e) {
      System.out.println ("Syntax Error!");
      parser.ReInit(System.in);
    }
    }
  }

}

PARSER_END(Parser)

SKIP :
{
  " "
| "\t"
| "\r"
}

TOKEN :
{
  < DEF: "def">
  |
  < IN: "in">
  |
  < END: "end">
  |
  < Id: ["a"-"z","A"-"Z"] ( ["a"-"z","A"-"Z","0"-"9"] )* >
  |
  < Num: (["0"-"9"]) + >
  |
  < PLUS : "+" >
  |
  < MINUS : "-">
  |
  < TIMES : "*">
  |
  < DIV : "/">
  |
  < LPAR : "(" >
  |
  < RPAR : ")" >
  | 
  < EQ : "|">
  |
  < EL: "\n" >
}

void Start() :
{}
{
   Exp() <EL>
}

void Exp() :
{}
{
     Term() ( ( <PLUS> | <MINUS> ) Term()  ) *

}

void Term() :
{}
{
     Fact() ( ( <TIMES> | <DIV> ) Term() )?
}


void Fact() :
{}
{
   ( <Num> |
   <LPAR> Exp() <RPAR> |
   < MINUS> Fact()
   | < DEF > <Id> <EQ> Exp() <IN>  Exp() <END> )
}
